tests/ui/diagnostic-width/tab-column-numbers.stderr
error[E0624]: method `method` is private
  --> $DIR/tab-column-numbers.rs:10:4
   |
LL |     s.method();
   |       ^^^^^^ private method
   |
  ::: $DIR/auxiliary/tab_column_numbers.rs:5:3
   |
LL |         fn method(&self) {}
   |         ---------------- private method defined here

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0624`.
